# DPA_dashboard

./: .gitignore  README.md  commits.csv  dashboard.py  developer_performance.csv  issue_data.csv  modules.py  pr_data.csv  pyproject.toml
vectorstore/db_faiss/: index.faiss  index.pkl
